methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:28: error: expected start of definition
override def run() {
         ^PatternPicture:53: error: Unmatched closing brace '}' ignored here
}
^